--- a/index.html
+++ b/index.html
@@ -1,17 +1,11 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Home</title>
-    <link rel="stylesheet" href="./main.css" />
-  </head>
-
-  <body>
-    <div id="container">Loading...</div>
-    <script src="./vendor/react.js"></script>
-    <script src="./vendor/react-dom.js"></script>
-    <script src="./vendor/ReactRouter.js"></script>
-    <script src="./vendor/babel-browser.min.js"></script>
-    <script type="text/babel" src="./index.jsx"></script>
-  </body>
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Hello React</title>
+</head>
+<body>
+  <div id="react-root"></div>
+  <script src="/build/bundle.js"></script>
+</body>
 </html>
